--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.App {
+.App{
   height: 100vh;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  /* grid-template-rows: auto 1fr auto; */
 }
-
-
 
 main {
   background: #FAF0EA;
