resolves tailwind conflict

--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@
 .App{
   height: 100vh;
   display: grid;
-  /* grid-template-rows: auto 1fr auto; */
+  grid-template-rows: auto 1fr auto;
 }
 
 main {
   background: #FAF0EA;
 }
+
 .links {
   padding: 15px;
   margin: 15px;
