--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,12 @@
   grid-template-rows: auto 1fr auto;
 }
 
-
-
 main {
   background: #FAF0EA;
 }
-.links {
+
+/* .links {
   padding: 15px;
   margin: 15px;
   display: flex;
-}
-
+} */
