--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,8 @@ main {
   background: #FAF0EA;
 }
 
-<<<<<<< HEAD
-/* .links {
-=======
 .links {
->>>>>>> 4f435dfc773c4878868dc5a2b90009eb9e96757b
   padding: 15px;
   margin: 15px;
   display: flex;
-} */
+}
